--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -80,7 +80,7 @@
 
           <% }) %>
 
-          <button class="boton-slider-1 btn btn-ver-todas btn-outline-secondary"><a class="btn btn-outline-secondary" href="/productos/productos"> Ver todas</a><i class="fas fa-paw huellita-reserva"></i></button>
+          <button class="boton-slider-1 btn-ver-todas "><a  href="/productos/productos"> Ver todas</a><i class="fas fa-paw huellita-reserva"></i></button>
 
         </section>
 
