--- a/public/css/style-header.css
+++ b/public/css/style-header.css
@@ -11,6 +11,10 @@
       --gris-oscuro: rgba(128, 128, 128, 0.247);
     }
 
+    .logo img{
+      object-fit: contain
+    }
+
     header {
       background-color: #c7dae0;
       position: fixed;
@@ -63,7 +67,7 @@
       display: block;
       margin: auto;
       min-width: 15vw;
-      max-height: 11vh;
+      max-height: 10vh;
     }
     
     .icon-cart,
@@ -250,7 +254,7 @@
     }
 
 
-    @media(min-width:900px){
+    @media(min-width:768px){
 
       header {
         background-color: #c7dae0;
@@ -288,18 +292,18 @@
 
       .searchbar {
         position: relative;
-        top: -15px;
+        top: -10px;
         right: -20px;
       }
 
       .input-buscar-guarderia{
-        font-size: 10px;
+        font-size: 12px;
         padding: 0 5px;
         border: none;
         border-radius: 5px;
-        width: 220px;
+        width: 300px;
         min-width: 5px;
-        max-width: 400px;
+        max-width: 450px;
         height: 18px;
       }
 
