--- a/src/views/carrito.ejs
+++ b/src/views/carrito.ejs
@@ -11,6 +11,9 @@
 
             <!-- Main: Secciones Resumen Cart - Codigo Descuento y Total -->
             <main>
+                <div class="boton-volver-home">
+                    <a href="/"><i class="far fa-arrow-alt-circle-left"></i> VOLVER</a>
+                </div>
                 <section class="resumen-cart-productos">
                     <article class="producto1">
                         <div class="prodcol1">
