--- a/src/views/detalle-producto.ejs
+++ b/src/views/detalle-producto.ejs
@@ -17,6 +17,9 @@
             <!-- Main -->
 
             <main>
+                <div class="boton-volver-home">
+                    <a href="/"><i class="far fa-arrow-alt-circle-left"></i> VOLVER</a>
+                </div>
 
                 <section class="detalleproducto">
                     <div class=imagenprod><img src="/img/guarderias/<%= daycare.image %> " alt="guarderia1"
