--- a/src/views/detalle-profile.ejs
+++ b/src/views/detalle-profile.ejs
@@ -13,18 +13,21 @@
 
             <!-- Main -->
             <main>
+                <div class="boton-volver-home">
+                    <a href="/"><i class="far fa-arrow-alt-circle-left"></i> VOLVER</a>
+                </div>
                 <span class="profile-title">MI CUENTA</span>
                 <div class="profile-body">
                 <img src="/img/users/<%=user.image%> " alt="profile pic" class="profileimg">
                 <div class="profile-text">
-                <div class="infouser"><div class="datos">Usuario:</div> <%= user.firstName %><%= user.lastName %></div>
+                <div class="infouser"><div class="datos">Usuario:</div> <%= user.firstName %> <%= user.lastName %></div>
                 <div class="infouser"><div class="datos">Fecha de Nacimiento:</div><%= user.date %></div>
                 <div class="infouser"><div class="datos">Direccion:</div><%= user.adress %></div>
                 <div class="infouser"><div class="datos">Correo Electronico:</div><%= user.email %></div>
                 <div class="infouser"><div class="datos">DNI:</div><%= user.dni %></div>
                 </div>
 
-                <div>
+                <div class="btn-editar-perfil">
                     <a href="/users/editar-perfil/<%= user.id %>">Editar Perfil</a>
                 </div>
                 </div>
