--- a/public/css/normalize.css
+++ b/public/css/normalize.css
@@ -6,9 +6,16 @@
 
 img {
     max-width: 100vw;
+    object-fit: cover;
 }
 
 main {
     margin-top: 8em;
   }
-  
+
+@media(min-width:768px){
+
+main {
+    margin-top: 7em;
+  }
+}
