--- a/public/css/style-editar-producto.css
+++ b/public/css/style-editar-producto.css
@@ -41,22 +41,22 @@
   border-radius: 10px;
 }
 
-form {
+.form-editar-producto {
   padding: 30px;
 }
 
-form div {
+.form-editar-producto div {
   padding: 10px;
 }
 
-form label{
+.form-editar-producto label{
   display: block;
   text-align: center;
   margin-bottom: 10px;
   color: rgb(85, 83, 83);
 }
 
-form input {
+.form-editar-producto input {
   border: none;
   border-radius: 5px;
   width: 400px;
@@ -68,7 +68,7 @@ form input {
   padding-bottom: 20px;
 }
 
-form button {
+.form-editar-producto button {
   font-size: 15px;
   background-color: grey;
   color: white;
