--- a/src/views/editar-producto.ejs
+++ b/src/views/editar-producto.ejs
@@ -23,7 +23,7 @@
                 <div class="contenedor-registro">
 
 
-                    <form action="/productos/editar-producto/<%=daycare.id%>/?_method=PUT" method="POST"
+                    <form class="form-editar-producto" action="/productos/editar-producto/<%=daycare.id%>/?_method=PUT" method="POST"
                         enctype="multipart/form-data">
 
 
