--- a/src/views/results.ejs
+++ b/src/views/results.ejs
@@ -22,6 +22,13 @@
                 <section class="articulos">
 
                     <% daycares.forEach(daycare=> { %>
+                        <% console.log(daycares) %>
+                        
+                   <% if (daycare == null) { %>
+                            
+                            <span>No se han encontrado resultados</span> 
+                        <% } %> 
+                    
 
 
                             <div class="cuerpo-detalle">
