edit link volver detalle producto

--- a/src/views/detalle-producto.ejs
+++ b/src/views/detalle-producto.ejs
@@ -18,7 +18,7 @@
 
             <main>
                 <div class="boton-volver-home">
-                    <a href="/"><i class="far fa-arrow-alt-circle-left"></i> VOLVER</a>
+                    <a href="/productos/productos"><i class="far fa-arrow-alt-circle-left"></i> VOLVER</a>
                 </div>
 
                 <section class="detalleproducto">
