--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -32,7 +32,7 @@
                     <div class="carousel-caption d-none d-md-block">
                       <h4 class="alojamascotas">AlojaMascota</h4>
                       <h5>ENCONTRA SU LUGAR</h5><br>
-                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos fugiat fugit quis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+                      <p>  Una infinidad de propuestas que se adaptan a vos y tu mascota. Las mejores guarderías con médicos veterinarios y especialistas en el comportamiento animal</p>
                       <button class="boton-slider-1 btn btn-outline-secondary"><a class="btn btn-outline-secondary" href="/productos/productos"> Ver mas ></a></button>
                     </div>
                   </div>
@@ -47,7 +47,7 @@
                     <img src="/img/mascota-playa2.jpeg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>PROMOCIÓN VERANO.</h5><br>
-                      <p>Some representative placeholder content for the third slide. Some representative placeholder content for the third slide. Some representative placeholder content for the third slide.</p>
+                      <p>¿Te vas de vacaciones y no sabés con quien dejar a tu mascota?. Si reservas con anticipación de 10 días te ofrecemos un 10 % de descuento. No te lo pierdas!!</p>
                     </div>
                   </div>
                 </div>
@@ -87,11 +87,10 @@
 
         <section class="sobre-nosotros">
             <h3>SOBRE NOSOTROS</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quo eveniet nobis, dolor repudiandae vel id
-                et repellendus quis commodi delectus voluptatum iste vero nisi maxime eligendi. Possimus, a dolore. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam debitis, commodi magni omnis aspernatur sapiente quae consequatur nostrum voluptate! </p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quo eveniet nobis, dolor repudiandae vel id
-                  et repellendus quis commodi delectus voluptatum iste vero nisi maxime eligendi. Possimus, a dolore. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam debitis, commodi magni omnis </p>
-
+            <p> AlojaMascotas fue fundada en 2003 en Argentina por un equipo multidisciplinario, tiene como misión el cuidado responsable de las mascotas.
+              Ayudamos a la gente a que pueda elegir la guardería que mejor se adapte a las preferencias de cada cliente. Ofrecemos un abanico de posibilidades para que tu amigo de cuatro patas cuente con el cuidado que necesita.
+               Con unos pocos clics vas a poder reservar de manera inmediata y segura el alojamiento que elijas</p>
+            <p>En AlojaMascotas creemos que el cuidado de tus mascotas es primordial y queremos ayudar a que encuentres su lugar de la manera más simple y confiable!</p>
               </section>
 
     </main>
